Fix contrat on mobile

--- a/styles/system.css
+++ b/styles/system.css
@@ -82,12 +82,6 @@ a:hover {
 .read-more {
   margin-bottom: 1rem;
 }
-header a {
-  color: hsl(16, 100%, 55%);
-}
-header a:hover {
-  color: hsl(16, 100%, 65%);
-}
 ul {
   list-style-position: inside;
 }
@@ -113,7 +107,13 @@ p + p {
 .striked {
   text-decoration: line-through;
 }
-/* NAV */
+/* HEADER */
+header a {
+  color: hsl(16, 100%, 55%);
+}
+header a:hover {
+  color: hsl(16, 100%, 65%);
+}
 nav {
   color: hsl(210, 18%, 11%);
 }
@@ -122,7 +122,7 @@ nav ul li {
   margin: 0 1rem;
 }
 .hamburger {
-  background-color: hsl(16, 100%, 41%);
+  background-color: hsl(16, 100%, 55%);
   color: #fff;
 }
 .hamburger a {
